Hamburger aligned vertically  (mobile hamburger fix)

--- a/src/components/Hamburger/style.scss
+++ b/src/components/Hamburger/style.scss
@@ -2,6 +2,7 @@
 
 .container {
   transition: all 0.25s ease;
+  align-self: center;
 
   &.isOpen {
     .trigger {
